Set constant font colors for buttons to fix light/dark mode contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4804,7 +4804,7 @@ select option {
   align-items: center;
   justify-content: center;
   gap: 12px;
-  color: var(--white);
+  color: #ffffff;
   border-radius: 99px;
   font-weight: 600;
   font-size: 16px;
@@ -4826,13 +4826,12 @@ select option {
   align-items: center;
   justify-content: center;
   gap: 12px;
-  color: var(--white);
+  color: #09090B;
   border-radius: 99px;
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
   padding: 14px 24px;
-  color: var(--primary);
   background: radial-gradient(62.56% 62.56% at 28.14% -10.42%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #F5F5F5, #F5F5F5);
   box-shadow: 0px -3px 0px 0px #E9E9E9 inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.6980392157) inset, 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.1215686275), 0px 3px 3px 0px rgba(0, 0, 0, 0.1411764706);
   overflow: hidden;
